Changed Umami hosting again

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script async src="https://shimmering-pony-5f2b90.netlify.app/script.js" data-website-id="ea0f9add-52dc-451c-90b6-39bcaccb5442"></script>
+    <script async src="https://umami-rust-theta.vercel.app/script.js" data-website-id="ea0f9add-52dc-451c-90b6-39bcaccb5442"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
